// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div>
  <div
    class="sc-beySPh ErGXa mute"
  >
    <label
      class="sc-dmyCSP eBqJxY undefined-label"
      data-name="label"
      stile="mute"
    >
      <h3
        class="sc-eDLKkx gySIDl undefined-heading"
        data-name="heading"
        stile="mute"
      />
      <input
        class="sc-guDLey jofGtu undefined-input"
        data-error="false"
        data-name="input"
        stile="mute"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with error 1`] = `
<div>
  <div
    class="sc-beySPh ErGXa mute"
  >
    <label
      class="sc-dmyCSP eBqJxY undefined-label"
      data-name="label"
      stile="mute"
    >
      <h3
        class="sc-eDLKkx gySIDl undefined-heading"
        data-name="heading"
        stile="mute"
      />
      <input
        class="sc-guDLey jofGtu error undefined-error undefined-input"
        data-error="true"
        data-name="input"
        stile="mute"
      />
    </label>
    <span
      class="sc-hLQSwg gpNhwr undefined-error-message"
      data-name="error-message"
    >
      error
    </span>
  </div>
</div>
`;
